--- a/web/public/locales/de/routes.guildsettings.permissions.json
+++ b/web/public/locales/de/routes.guildsettings.permissions.json
@@ -1,4 +1,5 @@
 {
   "heading": "Berechtigungen",
-  "explanation": "Lege fest, was bestimmte Gruppen von Nutzern machen dürfen."
+  "explanation": "Lege fest, was bestimmte Gruppen von Mitgliedern machen dürfen."
+
 }
