--- a/web/public/locales/de/routes.info.general.json
+++ b/web/public/locales/de/routes.info.general.json
@@ -1,6 +1,6 @@
 {
   "documentation": "Dokumentation (Englisch)",
-  "about": "Über",
+  "about": "Über shinpuru",
   "privacy": "Datenschutz",
   "contact": "Kontakt",
   "links": {
