--- a/web/public/locales/de/routes.info.system.json
+++ b/web/public/locales/de/routes.info.system.json
@@ -13,6 +13,6 @@
   "heapuse": "Heap",
   "botid": "Bot Benutzer-ID",
   "invite": "Einladungsink",
-  "guilds": "Anzahl der Guilds",
+  "guilds": "Anzahl der Server",
   "duration": "vor {{time}}"
 }
