--- a/web/public/locales/de/routes.settings.presence.json
+++ b/web/public/locales/de/routes.settings.presence.json
@@ -8,7 +8,7 @@
     "idle": "Inaktiv",
     "invisible": "Unsichtbar"
   },
-  "game": "Game",
+  "game": "Spiel",
   "save": "Einstellungen übernehmen",
   "notifications": {
     "saved": "Aktivitätsstatus wurde gespeichert und übernommen."
