--- a/web/public/locales/de/routes.usersettings.theme.json
+++ b/web/public/locales/de/routes.usersettings.theme.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Thema",
+  "heading": "Erscheinungsbild",
   "explanation": "Hier kannst Du das Aussehen der Weboberfläche für dich anpassen.",
   "scheme": {
     "heading": "Farbschema",
