--- a/web/public/locales/de/routes.guildsettings.general.json
+++ b/web/public/locales/de/routes.guildsettings.general.json
@@ -1,7 +1,7 @@
 {
   "reset": "Zurücksetzen",
   "save": "Einstellungen speichern",
-  "heading": "Generelle Guild-Einstellungen",
+  "heading": "Allgemeine Server-Einstellungen",
   "notifications": {
     "saved": "Einstellungen gespeichert."
   },
@@ -28,11 +28,11 @@
     "message_placeholder": "Willkommen auf dem Server, [user]!"
   },
   "leavemessage": {
-    "title": "Nachricht, wenn Member verlassen",
+    "title": "Verabschiedung von Mitgliedern",
     "channel_label": "Kanal",
     "channel_placeholder": "Bitte wähle einen Kanal aus ...",
     "message_label": "Abschiedsnachricht",
     "message_hint": "<1>[user]</1> wird mit dem Benutzernamen und <1>[ment]</1> wird mit einer Erwähnung des Nutzers ersetzt.",
-    "message_placeholder": "[user] hat die Guild verlassen."
+    "message_placeholder": "[user] hat den Server verlassen."
   }
 }
