--- a/web/public/locales/de/routes.guildsettings.karma.json
+++ b/web/public/locales/de/routes.guildsettings.karma.json
@@ -1,6 +1,7 @@
 {
   "heading": "Karma",
-  "explanation": "Dieses System erlaubt es Nutzern, Nachrichten hoch und runter zu \"voten\", indem man die dazu eingestellten Reaktionen auf die Nachrichten benutzt. Jeder Vote beeinflusst das Karma des Nutzers, welcher die Nachricht verfasst hat.",
+  "explanation": "Dieses System erlaubt es Nutzern, Nachrichten hoch und runter zu \"voten\", indem man die dazu eingestellten Reaktionen auf die Nachrichten verwendet. Jeder Vote beeinflusst das Karma des Nutzers, welcher die Nachricht verfasst hat.",
+
   "settings": "Einstellungen",
   "enable": "Karma-System einschalten",
   "save": "Einstellungen speichern",
@@ -19,7 +20,8 @@
   },
   "limit": {
     "heading": "Limit",
-    "description": "Die Menge an Downvotes, die ein Nutzer pro Stunde verteilen kann."
+    "description": "Die Menge an Downvotes, die ein Mitglied pro Stunde verteilen kann."
+
   },
   "penalty": {
     "heading": "Downvote-Preis",
@@ -32,8 +34,10 @@
   },
   "blocklist": {
     "heading": "Blockliste",
-    "description": "Blockierte Nutzer können weder Karma verteilen oder entfernen, noch können sie selber Karma erhalten oder abgezogen bekommen.",
-    "addmember": "Nutzer hinzufügen",
+    "description": "Blockierte Mitglieder können weder Karma verteilen oder entfernen, noch können sie selber Karma erhalten oder abgezogen bekommen.",
+
+    "addmember": "Mitglieder hinzufügen",
+
     "table": {
       "id": "ID",
       "name": "Name",
