--- a/web/public/locales/de/routes.noguilds.json
+++ b/web/public/locales/de/routes.noguilds.json
@@ -1,4 +1,4 @@
 {
-  "info": "Oh nein! Es sieht so aus, als hättest Du keine gemeinsamen Guilds mit shinpuru.<br />Lass uns das ändern, indem Du shinpuru zu einer deiner Guilds hinzufügst.",
+  "info": "Oh nein! Es sieht so aus, als hättest Du keine gemeinsamen Server mit shinpuru.<br />Lass uns das ändern, indem Du shinpuru zu einem deiner Server hinzufügst.",
   "invite": "Einladen"
 }
