--- a/web/public/locales/en-US/routes.start.json
+++ b/web/public/locales/en-US/routes.start.json
@@ -12,7 +12,7 @@
     },
     "karma": {
       "heading": "Karma",
-      "description": "Just like on Reddit, you can up and down vote messages. This affects the karma count of the people of your Guild so you and your mates always know right away who is the most trustworthy."
+      "description": "Just like on Reddit, you can up and down vote messages. This affects the karma count of the people of your guild so you and your mates always know right away who is the most trustworthy."
     },
     "reports": {
       "heading": "Report System",
@@ -20,11 +20,11 @@
     },
     "roleselect": {
       "heading": "Role Select",
-      "description": "Send messages where users can toggle their roles - fully automatically!"
+      "description": "Send messages where users can toggle their roles – fully automatically!"
     },
     "votes": {
       "heading": "Votes",
-      "description": "Want to settle a heated diskussion or simply get to know what your community wants or likes? Then the vote system is the perfect tool for you!"
+      "description": "Want to settle a heated discussion or simply get to know what your community wants or likes? Then the vote system is the perfect tool for you!"
     },
     "starboard": {
       "heading": "Starboard",
@@ -41,7 +41,7 @@
       "antiraid system",
       "link blocking",
       "user verification",
-      "public Guild API",
+      "public guild API",
       "responsive web interface",
       "slash commands",
       "message components"
